updated readme files, added starwars api to frontend and updated swapi service
