# backend/src/controllers/starWars.ts
@@ -6,19 +6,21 @@ import { validatorOptions } from '../validators/validatorOptions';
 
 export class StarWarsController {
   /**
-   * Retrieves starship data based in the name paramter.
+   * Retrieves swapi data based in their type and name paramter.
    *
    * @param {Request} req - The request object.
    * @param {Response} res - The response object.
    * @return {Promise<void>} - A promise that resolves with no value.
    */
-  static async getStarshipData(req: Request, res: Response) {
+  static async getSwapiData(req: Request, res: Response) {
     try {
+      const type = req.query.type?.toString() ?? "";
       const name = req.query.name?.toString() ?? "";
-      await StarWarsValidator.getStarshipDataSchema.validate({name}, validatorOptions);
 
-      let starshipData = await StarWarsService.getStarshipData(name);
-      res.status(200).send({ data: starshipData });
+      await StarWarsValidator.getSwapiDataSchema.validate({type, name}, validatorOptions);
+
+      let swapiData = await StarWarsService.getSwapiData(type, name);
+      res.status(200).send({ data: swapiData });
     } catch (error) {
       handleErrorResponse(res, error);
     }
