# backend/src/types/starWars.ts
@@ -1,20 +1,11 @@
-export interface StarshipData {
+export interface SwapiData {
     name: string;
-    model: string;
-    manufacturer: string;
-    cost_in_credits: string;
-    length: string;
-    max_atmosphering_speed: string;
-    crew: string;
-    passengers: string;
-    cargo_capacity: string;
-    consumables: string;
-    hyperdrive_rating: string;
-    MGLT: string;
-    starship_class: string;
-    pilots: [string];
-    films: [string];
-    created: number;
-    edited: number;
-    url:string;
+    //starship
+    model?: string;
+    passengers?: string;
+    manufacturer?: string;
+    //person
+    gender?: string;
+    hairColor?: string;
+    height?: string;
 }
